<resources>
    <string name="app_name" translatable="false">Wiser</string>
    <string name="facebook_app_id" translatable="false">570854019757986</string>
    <string name="facebook_user_id" translatable="false">1262642377098040</string>

    <string name="app_configuracoes_title">Configurações</string>
    <string name="app_configuracoes_item_status">Status</string>
    <string name="app_sobre_title">Sobre</string>
    <string name="app_sobre_item_versao">Versão %1$s</string>
    <string name="app_sobre_item_copyright" translatable="false">© 2016-2016 FATEC CPB</string>
    <string name="app_pesquisa_title">Encontrar Pessoas</string>
    <string name="chat_mensagens_title">Mensagens</string>
    <string name="chat_pesquisa_title">Pesquisar</string>
    <string name="chat_resultados_title">Resultados</string>
    <string name="forum_discussao_title">Discussões</string>
    <string name="forum_novadiscussao_title">Nova Discussão</string>
    <string name="forum_minhasdiscussoes_title">Minhas Discussões</string>
    <string name="forum_pesquisa_title">Pesquisar</string>
    <string name="forum_principal_title">Fórum</string>
    <string name="forum_resultados_title">Resultados</string>

    <string name="menu_configuracoes_title">Configurações</string>
    <string name="menu_sobre_title">Sobre</string>
    <string name="menu_sair_title">Desconectar</string>

    <string name="confirmar">Confirmar</string>
    <string name="procurar">Procurar</string>
    <string name="salvar">Salvar</string>
    <string name="configurar">Configurar</string>
    <string name="sucesso">Sucesso</string>
    <string name="erro">Erro</string>
    <string name="atualizar">Atualizar</string>
    <string name="nova">Nova</string>
    <string name="procurar_discussao">Procurar Discussão</string>
    <string name="excluir">Excluir</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="criar">Criar</string>
    <string name="enviar">Enviar</string>
    <string name="responder">Responder</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="nova_discussao">+ Nova Discussão</string>
    <string name="enviar_mensagem">Enviar mensagem</string>
    <string name="desativar">Desativar</string>

    <string name="ok" translatable="false">OK</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="usuario">Usuário</string>
    <string name="idioma">Idioma</string>
    <string name="fluencia">Fluência</string>

    <string name="distancia">Distância</string>
    <string name="resultado">Resultado</string>
    <string name="resposta">%1$s Resposta</string>
    <string name="respostas">%1$s Respostas</string>
    <string name="boas_vindas">Olá %1$s ;)</string>



    <string name="falha_login">Login Falhou. Tente novamente!</string>
    <string name="indisponivel_configuracao">Não foi possível carregar as configurações.</string>
    <string name="erro_desativar_conta">Um erro ocorreu ao desativar a conta.</string>
    <string name="erro_salvar_configuracao">Um erro ocorreu ao salvar a configuração.</string>
    <string name="confirmar_desativar_conta">Você deseja realmente desativar esta conta?</string>
    <string name="confirmar_salvar">Deseja realmente salvar?</string>
    <string name="sucesso_conta_desativada">A conta foi desativada com sucesso.</string>
    <string name="sucesso_salvar_configuracao">A configuração foi salva com sucesso.</string>
    <string name="usuarios_nao_encontrados">Não foram encontrados usuários para os filtros selecionados.</string>
    <string name="necessario_permitir">Wiser requer permissão de localização!</string>
    <string name="configuracoes_nao_personalizadas">Você ainda não personalizou suas configurações!</string>
    <string name="fazer_agora">Deseja fazer isto agora?</string>
    <string name="desativar_conta">Desativar Conta</string>
    <string name="entrar_com_facebook">Entrar com o Facebook</string>
    <string name="resultados_para">Resultados para \'%1$s\'</string>
    <string name="cont_discussoes" translatable="false">(%1$s)</string>
    <string name="discussao_encontrada">Discussão Encontrada</string>
    <string name="discussoes_encontradas">Discussoes Encontradas</string>
    <string name="procure_por">Procure por ID, Título, Descrição...</string>
    <string name="erro_criar_discussao">Um erro ocorreu ao criar a discussão.</string>
    <string name="sucesso_criar_discussao">A discussão foi criada com sucesso.</string>
    <string name="sucesso_discussao_excluida">A discussão foi excluída com sucesso.</string>
    <string name="erro_excluir_discussao">Um erro ocorreu ao excluir a discussão.</string>
    <string name="confirmar_excluir_discussao">Você deseja realmente excluir esta discussão?</string>
    <string name="erro_discussao_nao_encontrada">Não foram encontradas discussões com este filtro.</string>
    <string name="erro_usuario_sem_discussao">Você ainda não criou discussões.</string>
    <string name="erro_criar_discussao_campos">Título e Descrição devem estar preenchidos!</string>
    <string name="compartilhar_titulo" translatable="false">Wiser</string>
    <string name="compartilhar_discussao_sistema">Compartilhar discussão usando...</string>
    <string name="compartilhar_aplicativo_sistema">Compartilhar aplicativo usando...</string>
    <string name="sistema_link_playstore" translatable="false">https://play.google.com/store/apps/details?id=com.whatsapp</string> <!--exemplo-->
    <string name="nao_lida">não lida</string>
    <string name="nao_lidas">não lidas</string>
</resources>
