<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".forum.principal.ForumPrincipalFragment"
    tools:menu="br.com.app.res.menu.menu_principal" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nova"
        android:onClick="chamarNovaDiscussao"
        android:id="@+id/btnNovaDiscussao"
        android:textColor="@color/colorPrimaryInverseText"
        android:background="@drawable/btncustomshape"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/procurar_discussao"
        android:id="@+id/btnProcurarDiscussao"
        android:onClick="chamarProcurarDiscussao"
        android:layout_toEndOf="@id/btnNovaDiscussao"
        android:layout_toStartOf="@+id/btnAtualizarDiscussoes"
        android:textColor="@color/colorPrimaryInverseText"
        android:background="@drawable/btncustomshape"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar"
        android:id="@+id/btnAtualizarDiscussoes"
        android:onClick="atualizarDiscussoes"
        android:textColor="@color/colorPrimaryInverseText"
        android:background="@drawable/btncustomshape"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnProcurarDiscussao"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pgbLoading"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:progressDrawable="@drawable/circular_loading"
        android:visibility="invisible"
        android:progressTint="@color/colorAccent"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_in" />

</RelativeLayout>